--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha ./test.js",
     "start": "node server.js"
   },
   "repository": {
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/aflak-arshi/simple-node-ci-cd/issues"
   },
-  "homepage": "https://github.com/aflak-arshi/simple-node-ci-cd#readme"
+  "homepage": "https://github.com/aflak-arshi/simple-node-ci-cd#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mocha": "^6.1.4",
+    "supertest": "^4.0.2"
+  }
 }
